another attempt to fix on mobile

--- a/assets/css/indexStyle.css
+++ b/assets/css/indexStyle.css
@@ -8,6 +8,7 @@ body{
     background: linear-gradient(hsl(300, 100%, 33%), hsl(212, 100%, 49%)) fixed;
     background: -webkit-linear-gradient(hsl(300, 100%, 33%), hsl(212, 100%, 49%)) fixed;
     background-position: 0 56px;
+    background-size: cover;
 }
 
 html {
@@ -28,8 +29,7 @@ html {
 
 .intTitle{
     font-size: 8vw;
-    /* text-shadow: -5px 10px black; */
-    text-shadow: -5px 0px black;
+    text-shadow: -5px 10px black;
 }
 
 .title{
